2019-10-08  Enrico Schumann  <es@enricoschumann.net>

	* R/plotseries.R (plotseries): add arguments
	'labels.col' and 'cex.axis'

2019-10-07  Enrico Schumann  <es@enricoschumann.net>

	* R/plotseries.R (plotseries): decrease
	'labels.cex' to 0.7; add argument 'series.type'

2019-09-19  Enrico Schumann  <es@enricoschumann.net>

        * DESCRIPTION (Version): 0.1-0

2019-09-02  Enrico Schumann  <es@enricoschumann.net>

        * DESCRIPTION (Version): 0.0-1
