@@ -1,3 +1,8 @@
+2019-10-14  Enrico Schumann  <es@enricoschumann.net>
+
+	* R/plotseries.R (plotseries): add argument
+	'labels.pos'
+
 2019-10-08  Enrico Schumann  <es@enricoschumann.net>
 
 	* R/plotseries.R (plotseries): add arguments
